--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- HERO SECTION -->
   <section id="home" class="hero">
     <h1>Welcome to PRODIGY INFOTECH</h1>
-    <p>Hey! I'm Krish Mali. Me and My Team don't just build websites; We craft elegant, responsive, and powerful web solutions that genuinely elevate your digital presence and help you stand out online.</p>
+    <p>Hey! I'm Atharva Dhobale. Me and My Team don't just build websites; We craft elegant, responsive, and powerful web solutions that genuinely elevate your digital presence and help you stand out online.</p>
   </section>
 
   <!-- FEATURES SECTION -->
